--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
 <body>
 
-<div class="container">
-    <header class="header">
-        <div class="header-content content">
+<header class="header">
+    <div class="container">
+        <div class="header-content">
             <div class="logo">
                 <a href="#"><img src="img/nerds-logo.png" alt="logo"></a>
             </div>
@@ -41,146 +41,166 @@
                 <a href="#" class="menu-link cart"><img src="img/cart-icon.png" alt="cart-icon">Корзина</a>
             </div>
         </div>
-    </header>
+    </div>
+</header>
 
-    <section class="slider">
+<section id="slider">
+    <div class="container">
+        <div class="slider">
 
-        <div class="slider-indicators">
+            <div class="slider-indicators">
 
-            <div class="indicator">
-                <div class="indicator_hover"></div>
+                <div class="indicator">
+                    <div class="indicator_hover"></div>
+                </div>
+                <div class="indicator">
+                    <div class="indicator_hover"></div>
+                </div>
+                <div class="indicator">
+                    <div class="indicator_hover"></div>
+                </div>
+
             </div>
-            <div class="indicator">
-                <div class="indicator_hover"></div>
-            </div>
-            <div class="indicator">
-                <div class="indicator_hover"></div>
+
+            <div class="slider-content content slider 1">
+                <div class="slider-content-text">
+                    <h2>Долго, дорого, скрупулезно.</h2>
+                    <p>Математически выверенный дизайн
+                        для вашего сайта или мобильного приложения.</p>
+                    <a class="slider-button button" href="#">Узнать больше</a>
+                </div>
+                <div class="slider-content-image">
+                    <img src="img/slide1.png" alt="slide1">
+                </div>
             </div>
 
         </div>
+    </div>
+</section>
 
-        <div class="slider-content content slider 1">
-            <div class="slider-content-text">
-                <h2>Долго, дорого, скрупулезно.</h2>
-                <p>Математически выверенный дизайн
-                    для вашего сайта или мобильного приложения.</p>
-                <a class="slider-button button" href="#">Узнать больше</a>
-            </div>
-            <div class="slider-content-image">
-                <img src="img/slide1.png" alt="slide1">
-            </div>
-        </div>
-    </section>
+<section id="services">
+    <div class="container">
+        <div class="services">
 
-    <section class="services content">
+            <div class="services-content block1">
 
-        <div class="services-content block1">
+                <div class="services-content_image">
+                    <img src="img/services1.png" alt="services1">
+                </div>
 
-            <div class="services-content_image">
-                <img src="img/services1.png" alt="services1">
-            </div>
+                <div class="services-content_text">
+                    <h2>Веб-сайты</h2>
+                    <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+                </div>
 
-            <div class="services-content_text">
-                <h2>Веб-сайты</h2>
-                <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+                <a class="services-content-button button" href="#">заказать</a>
+
             </div>
 
-            <a class="services-content-button button" href="#">заказать</a>
+            <div class="services-content block2">
 
-        </div>
+                <div class="services-content_image">
+                    <img src="img/services2.png" alt="services1">
+                </div>
 
-        <div class="services-content block2">
+                <div class="services-content_text">
+                    <h2>Приложения</h2>
+                    <p>Покорите топ-10 приложений в AppStore и Google Play</p>
+                </div>
 
-            <div class="services-content_image">
-                <img src="img/services2.png" alt="services1">
+                <a class="services-content-button button" href="#">заказать</a>
+
             </div>
 
-            <div class="services-content_text">
-                <h2>Приложения</h2>
-                <p>Покорите топ-10 приложений в AppStore и Google Play</p>
+            <div class="services-content block3">
+
+                <div class="services-content_image">
+                    <img src="img/services3.png" alt="services1">
+                </div>
+
+                <div class="services-content_text">
+                    <h2>Презентации</h2>
+                    <p>Вы даже не подозреваете, насколько вы изумительны!</p>
+                </div>
+
+                <a class="services-content-button button" href="#">заказать</a>
+
             </div>
-
-            <a class="services-content-button button" href="#">заказать</a>
-
-        </div>
-
-        <div class="services-content block3">
-
-            <div class="services-content_image">
-                <img src="img/services3.png" alt="services1">
-            </div>
-
-            <div class="services-content_text">
-                <h2>Презентации</h2>
-                <p>Вы даже не подозреваете, насколько вы изумительны!</p>
-            </div>
-
-            <a class="services-content-button button" href="#">заказать</a>
 
         </div>
+    </div>
+</section>
 
-    </section>
+<section id="about">
+    <div class="container">
+        <div class="about">
 
-    <section id="about" class="about content">
+            <div class="about-content_block content_block1">
+                <h2>Мы — маленькая, но гордая дизайн-студия из Краснодара. </h2>
+                <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не
+                    покладая рук, как роботы.</p>
 
-        <div class="about-content_block content_block1">
-            <h2>Мы — маленькая, но гордая дизайн-студия из Краснодара. </h2>
-            <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не
-                покладая рук, как роботы.</p>
-            <div class="orders">
-            <h3>Выполняем заказы на разработку:</h3>
-            <p><span class="line_orders">&#8213;</span> Веб-сайтов любой сложности</p>
-            <p><span class="line_orders">&#8213;</span> Мобильных приложений для iOS и Android</p>
-            <p><span class="line_orders">&#8213;</span> Слайдшоу и видео для корпоративных презентаций</p>
-            </div>
-        </div>
+                <div class="orders">
+                    <h3>Выполняем заказы на разработку:</h3>
+                    <p><span class="line_orders">&#8213;</span> Веб-сайтов любой сложности</p>
+                    <p><span class="line_orders">&#8213;</span> Мобильных приложений для iOS и Android</p>
+                    <p><span class="line_orders">&#8213;</span> Слайдшоу и видео для корпоративных презентаций</p>
+                </div>
 
-        <div class="about-content_block content_block2">
-
-            <div class="about-content_block-image">
-                <img src="img/nerds-illustration.png" alt="nerds">
             </div>
 
-            <div class="about-content-numbers">
+            <div class="about-content_block content_block2">
+
+                <div class="about-content_block-image">
+                    <img src="img/nerds-illustration.png" alt="nerds">
+                </div>
+
+                <div class="about-content-numbers">
                     <div class="item names">
                         <p>с 2004 года Любим точность во всем:</p>
                     </div>
-                <div class="item number"><p>146</p></div>
-                <div class="item number"><p>100</p></div>
-                <div class="item number"><p>50</p></div>
-                <div class="item"><p>Уровень самоотдачи</p></div>
-                <div class="item"><p>Соблюдение сроков</p></div>
-                <div class="item"><p>Минимальная предоплата</p></div>
+                    <div class="item number"><p>146</p></div>
+                    <div class="item number"><p>100</p></div>
+                    <div class="item number"><p>50</p></div>
+                    <div class="item"><p>Уровень самоотдачи</p></div>
+                    <div class="item"><p>Соблюдение сроков</p></div>
+                    <div class="item"><p>Минимальная предоплата</p></div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</section>
+
+<div id="customers">
+    <div class="container">
+
+        <div class="customers">
+
+            <div class="logo">
+                <a href=""><img src="img/html_academy.png" alt="html_academy"></a>
+            </div>
+
+            <div class="logo">
+                <a href=""><img src="img/borodinski.png" alt="html_academy"></a>
+            </div>
+
+            <div class="logo">
+                <a href=""><img src="img/pink.png" alt="html_academy"></a>
+            </div>
+
+            <div class="logo">
+                <a href=""><img src="img/mishka.png" alt="html_academy"></a>
             </div>
 
         </div>
+    </div>
+</div>
 
-    </section>
+<section id="contacts">
+    <div class="contacts">
 
-    <section id="customers" class="customers content">
-
-        <div class="logo">
-            <a href=""><img src="img/html_academy.png" alt="html_academy"></a>
-        </div>
-
-        <div class="logo">
-            <a href=""><img src="img/borodinski.png" alt="html_academy"></a>
-        </div>
-
-        <div class="logo">
-            <a href=""><img src="img/pink.png" alt="html_academy"></a>
-        </div>
-
-        <div class="logo">
-            <a href=""><img src="img/mishka.png" alt="html_academy"></a>
-        </div>
-
-    </section>
-
-
-    <section id="contacts" class="contacts">
-
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1413.229277634942!2d30.322123338170584!3d59.93864639716024!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2sby!4v1611059565328!5m2!1sru!2sby" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1413.229277634942!2d30.322123338170584!3d59.93864639716024!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2sby!4v1611059565328!5m2!1sru!2sby"></iframe>
 
         <div class="contacts_form">
             <div class="contacts_form-text">
@@ -194,35 +214,35 @@
 
         </div>
 
-    </section>
+    </div>
+</section>
 
-    <footer class="footer content">
+<footer id="footer">
+    <div class="container">
+        <div class="footer">
+            <div class="icons">
 
-        <div class="icons">
+                <div class="icon vk-icon">
+                    <a href=""><img src="img/vk-icon.png" alt="vk-icon"></a>
+                </div>
 
-            <div class="icon vk-icon">
-                <a href=""><img src="img/vk-icon.png" alt="vk-icon"></a>
+                <div class="icon fb-icon">
+                    <a href=""><img src="img/fb-icon.png" alt="fb-icon"></a>
+                </div>
+
+                <div class="icon insta-icon">
+                    <a href=""><img src="img/insta-icon.png" alt="insta-icon"></a>
+                </div>
+
             </div>
 
-            <div class="icon fb-icon">
-                <a href=""><img src="img/fb-icon.png" alt="fb-icon"></a>
+            <div class="footer-text">
+                <h2>Давайте дружить, это выгодно!</h2>
+                <p>Скидка 10% для друзей из социальных сетей.</p>
             </div>
-
-            <div class="icon insta-icon">
-                <a href=""><img src="img/insta-icon.png" alt="insta-icon"></a>
-            </div>
-
         </div>
-
-        <div class="footer-text">
-            <h2>Давайте дружить, это выгодно!</h2>
-            <p>Скидка 10% для друзей из социальных сетей.</p>
-        </div>
-
-    </footer>
-
-</div>
+    </div>
+</footer>
 
 </body>
-
 </html>
