--- a/index.html
+++ b/index.html
@@ -25,21 +25,18 @@
                 <a href="#"><img src="img/nerds-logo.png" alt="logo"></a>
             </div>
 
-            <label class="burger_label" for="burger">
-                <div class="bar1"></div>
-                <div class="bar2"></div>
-                <div class="bar3"></div>
-            </label>
-            <input id="burger" type="checkbox">
+            <nav>
+                <input id="menu_check" type="checkbox">
+                <label for="menu_check" class="menu_label"></label>
 
-
-            <div class="navigation_item">
-                <a href="#about" class="menu-link">Студия</a>
-                <a href="#customers" class="menu-link">Клиенты</a>
-                <a href="#contacts" class="menu-link">Магазин</a>
-                <a href="#contacts" class="menu-link">Контакты</a>
-                <a href="#" class="menu-link cart"><img src="img/cart-icon.png" alt="cart-icon">Корзина</a>
-            </div>
+                <div class="navigation_item">
+                    <a href="#about" class="menu-link">Студия</a>
+                    <a href="#customers" class="menu-link">Клиенты</a>
+                    <a href="#contacts" class="menu-link">Магазин</a>
+                    <a href="#contacts" class="menu-link">Контакты</a>
+                    <a href="#" class="menu-link cart"><img src="img/cart-icon.png" alt="cart-icon">Корзина</a>
+                </div>
+            </nav>
         </div>
     </div>
 </header>
